--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ read_more                : "enabled" # if enabled, adds "Read more" links to exc
 comments:
   provider               : "discourse" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
-    shortname            :
+    shortname            :"xxx"
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
