--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ comments:
   disqus:
     shortname            :"xxx"
   discourse:
-    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+    server               : "meta.discourse.org" # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
     appid                :
     num_posts            : # 5 (default)
