--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ words_per_minute         : 160
 future                   : true
 read_more                : "enabled" # if enabled, adds "Read more" links to excerpts
 comments:
-  provider               : "discourse" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  provider               : "staticman" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            :"xxx"
   discourse:
