add index.html for jafr

--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  jafr:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
