--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Mojtaba Marashi / Personal2 Site"
+title                    : "Mojtaba Marashi"
 title_separator          : "-"
 name                     : &name "Mojtaba Marashi"
-description              : &description "personal2 description"
+description              : &description "personal description"
 url                      : "https://mojtabamarashee.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mojtabamarashee/mojtabamarashee.github.io"
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Mojtaba Marashee"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Self-Taught Programmer"
   location         : "Location"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
@@ -93,7 +93,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "github.com/mojtabamarashee"
   google_plus      :
   keybase          :
   instagram        :
@@ -106,6 +106,7 @@ author:
   steam            :
   tumblr           :
   twitter          : "replacethistwitterhandle"
+  telegram          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
