--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "github.com/mojtabamarashee"
+  github           : "mojtabamarashee"
   google_plus      :
   keybase          :
   instagram        :
@@ -105,7 +105,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "mojtabamarashee"
   telegram          : "replacethistwitterhandle"
   vine             :
   weibo            :
