--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ repository               : "mojtabamarashee/mojtabamarashee.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 130
-future                   : true
+future                   : false
 read_more                : "enabled" # if enabled, adds "Read more" links to excerpts
 comments:
   provider               : "staticman" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
