--- a/_config.yml
+++ b/_config.yml
@@ -262,6 +262,7 @@ gems:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
+  - jekyll-seo-tag
   - jekyll-redirect-from
 # mimic GitHub Pages with --safe
 whitelist:
